--- a/src/Chirp/chirp.csproj
+++ b/src/Chirp/chirp.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleDB\SimpleDB.csproj" />
+    <ProjectReference Include="..\..\test\Chirp.CLI.Client.Tests\Chirp.CLI.Client.Tests.csproj" />
   </ItemGroup>
 
 </Project>
