--- a/src/SimpleDB/SimpleDB.csproj
+++ b/src/SimpleDB/SimpleDB.csproj
@@ -8,5 +8,8 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\test\Chirp.CSVDB.Tests\Chirp.CSVDB.Tests.csproj" />
+  </ItemGroup>
 
 </Project>
