--- a/.github/workflows/Build_and_test_all_OS.yml
+++ b/.github/workflows/Build_and_test_all_OS.yml
@@ -2,9 +2,15 @@ name: .NET Build and Test
 
 on: workflow_dispatch 
 
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+         os: [ubuntu-latest, windows-latest]
+                
 
     steps:
     - uses: actions/checkout@v3
