--- a/test/Chirp.CSVDB.Tests/Chirp.CSVDB.Tests.csproj
+++ b/test/Chirp.CSVDB.Tests/Chirp.CSVDB.Tests.csproj
@@ -22,4 +22,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\SimpleDB\SimpleDB.csproj" />
+    <ProjectReference Include="..\..\src\Chirp\chirp.csproj" />
+  </ItemGroup>
+
 </Project>
