--- a/.github/workflows/Publish_new_release.yml
+++ b/.github/workflows/Publish_new_release.yml
@@ -22,12 +22,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Setup dotnet
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 3.1.101
+          dotnet-version: 7.0.x
 
       - name: Build
         shell: bash
