--- a/.github/workflows/Publish_new_release.yml
+++ b/.github/workflows/Publish_new_release.yml
@@ -1,7 +1,8 @@
 name: Publish
 on:
-  release:
-    types: [published]
+  push:
+    tags: 
+      - '*'
 jobs:
   release:
     name: Release
@@ -51,6 +52,6 @@ jobs:
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
-          files: "App*"
+          files: "Chirp*"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
