--- a/.github/workflows/Publish_new_release.yml
+++ b/.github/workflows/Publish_new_release.yml
@@ -1,5 +1,8 @@
 name: Publish
-on: workflow_dispatch 
+on:
+  push:
+    tags:
+      - v**
 jobs:
   release:
     name: Release
@@ -30,21 +33,17 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          # Define some variables for things we need
           tag=$(git describe --tags --abbrev=0)
           release_name="App-$tag-${{ matrix.target }}"
 
-          # Build everything
-          dotnet publish src/App/App.csproj --framework netcoreapp3.1 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
+          dotnet publish src/Chirp/chirp.csproj --framework netcoreapp3.1 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
 
-          # Pack files
           if [ "${{ matrix.target }}" == "win-x64" ]; then
             7z a -tzip "${release_name}.zip" "./${release_name}/*"
           else
             tar czvf "${release_name}.tar.gz" "$release_name"
           fi
 
-          # Delete output directory
           rm -r "$release_name"
       - name: Publish
         uses: softprops/action-gh-release@v1
