--- a/.github/workflows/Publish_new_release.yml
+++ b/.github/workflows/Publish_new_release.yml
@@ -1,22 +1,17 @@
 name: Publish
-on: workflow_dispatch
+on: 
+  push:
+    branches: [ main ]
+    tags: [ 'v*.*.*' ]
+    
 jobs:
   release:
     name: Release
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        kind: ['linux', 'windows', 'macOS']
-        include:
-          - kind: linux
-            os: ubuntu-latest
-            target: linux-x64
-          - kind: windows
-            os: windows-latest
-            target: win-x64
-          - kind: macOS
-            os: macos-latest
-            target: osx-x64
-    runs-on: ${{ matrix.os }}
+         os: [win-x64, osx-x64, linux-x64]
+
 
     steps:
       - name: Checkout
@@ -26,25 +21,21 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 7.0.x
+      - name: Restore
+        run: dotnet restore
 
-      - name: Build
-        shell: bash
-        run: |
-          tag=$(git describe --tags --abbrev=0)
-          release_name="App-$tag-${{ matrix.target }}"
+      - name: Test
+        run: dotnet test --verbosity normal
 
-          dotnet publish src/Chirp/chirp.csproj --framework netcoreapp3.1 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
+      - name: Build for all
+        run: dotnet publish ./src/Chirp/chirp.csproj --no-restore --configuration Release -r ${{matrix.os}} --no-self-contained -p:PublishSingleFile=true 
 
-          if [ "${{ matrix.target }}" == "win-x64" ]; then
-            7z a -tzip "${release_name}.zip" "./${release_name}/*"
-          else
-            tar czvf "${release_name}.tar.gz" "$release_name"
-          fi
-
-          rm -r "$release_name"
+      - name: Zipping files
+        run: cd ./src/Chirp/bin/Release/net7.0/${{matrix.os}}/publish && zip ../../../../../../../Chirp-${{github.ref_name}}-${{matrix.os}}.zip Chirp.exe
+        
       - name: Publish
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: "Chirp*"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          files: Chirp-${{github.ref_name}}-${{matrix.os}}.zip
+        
