--- a/.github/workflows/Publish_new_release.yml
+++ b/.github/workflows/Publish_new_release.yml
@@ -8,10 +8,6 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-         os: [win-x64, osx-x64, linux-x64]
-
 
     steps:
       - name: Checkout
@@ -27,15 +23,27 @@ jobs:
       - name: Test
         run: dotnet test --verbosity normal
 
-      - name: Build for all
-        run: dotnet publish ./src/Chirp/chirp.csproj --no-restore --configuration Release -r ${{matrix.os}} --no-self-contained -p:PublishSingleFile=true 
+      - name: Build for Windows
+        run: dotnet publish ./src/Chirp/chirp.csproj --no-restore --configuration Release -r win-x64 --no-self-contained -p:PublishSingleFile=true 
+      
+      - name: Build for MacOS
+        run: dotnet publish ./src/Chirp/chirp.csproj --no-restore --configuration Release -r osx-x64 --no-self-contained -p:PublishSingleFile=true 
+      
+      - name: Build for Linux
+        run: dotnet publish ./src/Chirp/chirp.csproj --no-restore --configuration Release -r linux-x64 --no-self-contained -p:PublishSingleFile=true 
 
       - name: Zipping files
-        run: cd ./src/Chirp/bin/Release/net7.0/${{matrix.os}}/publish && zip ../../../../../../../Chirp-${{github.ref_name}}-${{matrix.os}}.zip Chirp.exe
+        run: |
+          cd ./src/Chirp/bin/Release/net7.0/win-x64/publish && zip ../../../../../../../Chirp-${{github.ref_name}}-win-x64.zip Chirp.exe
+          cd ./src/Chirp/bin/Release/net7.0/osx-x64/publish && zip ../../../../../../../Chirp-${{github.ref_name}}-osx-x64.zip Chirp.exe
+          cd ./src/Chirp/bin/Release/net7.0/linux-x64/publish && zip ../../../../../../../Chirp-${{github.ref_name}}-linux-x64.zip Chirp.exe
         
       - name: Publish
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: Chirp-${{github.ref_name}}-${{matrix.os}}.zip
+          files: |
+          Chirp-${{github.ref_name}}-win-x64.zip
+          Chirp-${{github.ref_name}}-osx-x64.zip
+          Chirp-${{github.ref_name}}-linux-x64.zip
         
