--- a/.github/workflows/main_bdsagroup04chirpremotedb.yml
+++ b/.github/workflows/main_bdsagroup04chirpremotedb.yml
@@ -23,7 +23,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build src/Chirp.CSVDBService/ --configuration Release
+        run: dotnet build src/Chirp.CSVDBService --configuration Release
 
       - name: dotnet publish
         run: dotnet publish src/Chirp.CSVDBService -c Release -o ${{env.DOTNET_ROOT}}/myapp
