Azure deploy ment should work now. Fixed dependencies so that azure launches from the right project for not the cheep record is a dublicate it should be moved to to a seperate folder so that all project can see it. and there are no dublicates Co-authored-by: Lukas lukan@itu.dk

--- a/src/Chirp.CSVDBService/Chirp.CSVDBService.csproj
+++ b/src/Chirp.CSVDBService/Chirp.CSVDBService.csproj
@@ -2,7 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleDB\SimpleDB.csproj" />
-    <EmbeddedResource Include="..\Chirp\chirp_cli_db.csv"/>
+    <EmbeddedResource Include="chirp_cli_db.csv"/>
   </ItemGroup>
 
   <PropertyGroup>
