--- a/src/Chirp.CSVDBService/Chirp.CSVDBService.csproj
+++ b/src/Chirp.CSVDBService/Chirp.CSVDBService.csproj
@@ -2,7 +2,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleDB\SimpleDB.csproj" />
-    <EmbeddedResource Include="chirp_cli_db.csv"/>
+    <EmbeddedResource Include="chirp_cli_db.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SQLDB\SQLDB.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
