--- a/.github/workflows/main_bdsagroup04chirpremotedb.yml
+++ b/.github/workflows/main_bdsagroup04chirpremotedb.yml
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'bdsagroup04chirpremotedb'
+          app-name: 'bdsagroup04chirprazor'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B77B332B82CB4E759514076C12C23AFD }}
           package: .
