--- a/.github/workflows/Publish_new_release.yml
+++ b/.github/workflows/Publish_new_release.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Zipping files
         run: |
-          cd ./src/Chirp/bin/Release/net7.0/win-x64/publish && zip ../../../../../../../Chirp-${{github.ref_name}}-win-x64.zip Chirp.Razor.exe
+          cd ./src/Chirp.Razor/bin/Release/net7.0/win-x64/publish && zip ../../../../../../../Chirp-${{github.ref_name}}-win-x64.zip Chirp.Razor.exe
           cd ../../osx-x64/publish && zip ../../../../../../../Chirp-${{github.ref_name}}-osx-x64.zip Chirp.Razor
           cd ../../linux-x64/publish && zip ../../../../../../../Chirp-${{github.ref_name}}-linux-x64.zip Chirp.Razor
         
