--- a/src/Chirp.Razor/Chirp.Razor.csproj
+++ b/src/Chirp.Razor/Chirp.Razor.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.11" />
-    <EmbbededRessource Include="../../data/**/*" />
+    <EmbbededResource Include="../../data/**/*" />
   </ItemGroup>
 
 </Project>
