--- a/src/Chirp.Razor/Chirp.Razor.csproj
+++ b/src/Chirp.Razor/Chirp.Razor.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.11" />
     <EmbeddedResource Include="../../data/**/*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.11" />
   </ItemGroup>
 
 </Project>
