Added references for the test inside the csproj
Might fix the issue with it not deploying correctly

--- a/test/Chirp.Razor.Test/Chirp.Razor.Test.csproj
+++ b/test/Chirp.Razor.Test/Chirp.Razor.Test.csproj
@@ -23,6 +23,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.11" />
+    <EmbeddedResource Include="../../data/**/*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Chirp.Razor\Chirp.Razor.csproj" />
   </ItemGroup>
 
