Added partial public class and InternalVisibleTo

--- a/test/Chirp.Razor.Test/Chirp.Razor.Test.csproj
+++ b/test/Chirp.Razor.Test/Chirp.Razor.Test.csproj
@@ -29,7 +29,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Chirp.Razor\Chirp.Razor.csproj" />
-  </ItemGroup>
+     <InternalsVisibleTo Include="Program" />
+</ItemGroup>
+
 
 </Project>
