a reference was accidentally deleted

--- a/test/Chirp.Razor.Test/Chirp.Razor.Test.csproj
+++ b/test/Chirp.Razor.Test/Chirp.Razor.Test.csproj
@@ -32,5 +32,9 @@
      <InternalsVisibleTo Include="Program" />
 </ItemGroup>
 
+<ItemGroup>
+  <ProjectReference Include="..\..\src\Chirp.Razor\Chirp.Razor.csproj" />
+</ItemGroup>
+
 
 </Project>
