Added the migration folder and it's content to the folder execpt the snapshot

--- a/.gitignore
+++ b/.gitignore
@@ -476,3 +476,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 *.json
+
+# Migrattion files
+src/Chirp.Razor/Migrations/*.cs
+!src/Chirp.Razor/Migrations/ChirpDBContextModelSnapshot.cs
