Test commit, will prob delete
Added few lines in program.cs that makes the program able to run but now without the DB and migrations created beforehand. So will se if anything exciting happens in deployment as

--- a/.gitignore
+++ b/.gitignore
@@ -478,5 +478,5 @@ $RECYCLE.BIN/
 *.json
 
 # Migrattion files
-src/Chirp.Razor/Migrations/*.cs
+!src/Chirp.Razor/Migrations/*.cs
 !src/Chirp.Razor/Migrations/ChirpDBContextModelSnapshot.cs
