Added a page to write out the header of the reponse of a call to baseurl..../.auth/me, as an early stage of a page showing identty recieved from GitHub via ouath.
Co-authored-by: Marius <mariu@itu.dk>
Co-authored-by: Niels <nfab@itu.dk>

--- a/src/Chirp.Razor/Chirp.Razor.csproj
+++ b/src/Chirp.Razor/Chirp.Razor.csproj
@@ -26,6 +26,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
