Added github authentication to program.cs
Co-authored-by: Oliver <oash@itu.dk>
Co-authored-by: Niels <nfab@itu.dk>
Co-authored-by: Anna <annaj@itu.dk>
Co-authored-by: Marius <mariu@itu.dk>"

--- a/src/Chirp.Razor/Chirp.Razor.csproj
+++ b/src/Chirp.Razor/Chirp.Razor.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="7.0.4" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.11" />
     <EmbeddedResource Include="../../data/**/*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.12">
