Added some b2c stuff to appsettings

--- a/src/Chirp.Razor/appSettings.json
+++ b/src/Chirp.Razor/appSettings.json
@@ -1,4 +1,15 @@
 {
+    "AzureADB2C": {
+      "Instance": "https://chirp4.b2clogin.com",
+      "Domain": "Azure AD B2C | User flows",
+      "TenantId": "5176c6b3-b8cc-40ac-86c9-341116f21ad6",
+      "ClientId": "85f39c1b-c0db-41f5-b9f2-3bcc759afc4d",
+      "ClientSecret": "08de02c5-d7f4-4edf-8905-ba6272f43f43",      
+      "ClientCapabilities": [ "cp1" ],
+      "CallbackPath": "/signin-oidc",
+      "SignUpSignInPolicyId": "B2C_1_signup_signin",
+      "SignedOutCallbackPath": "/signout-callback-oidc"
+    },
     "Logging": {
       "LogLevel": {
         "Default": "Information",
