--- a/src/Chirp.Razor/Chirp.Razor.csproj
+++ b/src/Chirp.Razor/Chirp.Razor.csproj
@@ -25,6 +25,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.15.3" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.15.3" />
   </ItemGroup>
 
   <ItemGroup>
