Added Allowed Hosts Co-authored-by: Lukan@itu.dk

--- a/src/Chirp.Razor/appSettings.json
+++ b/src/Chirp.Razor/appSettings.json
@@ -16,5 +16,6 @@
     },
     "ConnectionStrings":{
       "DefaultConnection": "Server=localhost,1433;Database=ChirpDB;User=sa;Password=Adm1nBDSA;"
-    }
+    },
+    "AllowedHosts": "*"
 }
