--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-         os: [ubuntu-latest, windows-latest, macos-latest]
+         os: [windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v3
@@ -26,3 +26,19 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+  build-ubuntu:
+    runs-on: ubuntu-latest
+
+    steps:
+     - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 7.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build --no-restore
+    - name: Test
+      run: cd test/Chirp.Razor.Tests/bin/Debug/net7.0
+      run: dotnet test Chirp.Razor.Tests.dll --no-build --verbosity normal
