--- a/src/Chirp.Razor/appSettings.Development.json
+++ b/src/Chirp.Razor/appSettings.Development.json
@@ -1,13 +1,13 @@
 {
-    "AzureADB2C": {
-      "Instance": "https://chirp4.b2clogin.com",
-      "ClientId": "85f39c1b-c0db-41f5-b9f2-3bcc759afc4d",  
-      "Domain": "chirp4.onmimcrosoft.com",
-      "TenantId": "5176c6b3-b8cc-40ac-86c9-341116f21ad6",
-      "CallbackPath": "/signin-oidc",
-      "SignUpSignInPolicyId": "B2C_1_signup_signin",
-      "SignedOutCallbackPath": "/signout-callback-oidc"
-      },
+  "AzureAdB2C": {
+    "Instance": "https://chirp4.b2clogin.com",
+    "ClientId": "85f39c1b-c0db-41f5-b9f2-3bcc759afc4d",  
+    "Domain": "chirp4.onmicrosoft.com",
+    "TenantId": "5176c6b3-b8cc-40ac-86c9-341116f21ad6",
+    "CallbackPath": "/signin-oidc",
+    "SignUpSignInPolicyId": "B2C_1_SigninSignupGithub",
+    "SignedOutCallbackPath": "/signout-callback-oidc"
+  },
       "DetailedErrors": true,
     "Logging": {
       "LogLevel": {
@@ -17,5 +17,6 @@
     },
     "ConnectionStrings":{
       "DefaultConnection": "Server=localhost,1433;Database=ChirpDB;User=sa;Password=Adm1nBDSA;"
-    }
+    },
+    "AllowedHosts": "*"
 }
