--- a/src/Chirp.Razor/appSettings.json
+++ b/src/Chirp.Razor/appSettings.json
@@ -1,11 +1,11 @@
 {
-    "AzureADB2C": {
+    "AzureAdB2C": {
       "Instance": "https://chirp4.b2clogin.com",
       "ClientId": "85f39c1b-c0db-41f5-b9f2-3bcc759afc4d",  
-      "Domain": "chirp4.onmimcrosoft.com",
+      "Domain": "chirp4.onmicrosoft.com",
       "TenantId": "5176c6b3-b8cc-40ac-86c9-341116f21ad6",
       "CallbackPath": "/signin-oidc",
-      "SignUpSignInPolicyId": "B2C_1_signup_signin",
+      "SignUpSignInPolicyId": "B2C_1_SigninSignupGithub",
       "SignedOutCallbackPath": "/signout-callback-oidc"
     },
     "Logging": {
