Added launch settings and cleaned up program

--- a/src/Chirp.Razor/appSettings.Development.json
+++ b/src/Chirp.Razor/appSettings.Development.json
@@ -11,7 +11,7 @@
       "DetailedErrors": true,
     "Logging": {
       "LogLevel": {
-        "Default": "Information",
+        "Default": "debug",
         "Microsoft.AspNetCore": "Warning"
       }
     },
