Changes to appSettings

--- a/src/Chirp.Razor/appSettings.json
+++ b/src/Chirp.Razor/appSettings.json
@@ -15,7 +15,7 @@
       }
     },
     "ConnectionStrings":{
-      "DefaultConnection": "Server=localhost,1433;Database=ChirpDB;User=sa;Password=Adm1nBDSA;"
+      "ChirpDB": "Server=localhost,1433;Database=chirpdb;User=SA;Password=Admin123;TrustServerCertificate=True;"
     },
     "AllowedHosts": "*"
 }
