Fixed adding cheeps on both userpage and timeline
Had a bug where 2nd cheep added would crash

Co-Authored-By: SkarpKat <143702901+SkarpKat@users.noreply.github.com>

--- a/src/Chirp.Razor/appSettings.Development.json
+++ b/src/Chirp.Razor/appSettings.Development.json
@@ -16,7 +16,7 @@
     }
   },
   "ConnectionStrings": {
-    "ChirpDB": "Server=localhost,1433;Database=ChirpDB;User=SA;Password=Admin123;TrustServerCertificate=True;"
+    "ChirpDB": "Server=localhost,1433;Database=ChirpDB;User=SA;Password=Admin123;TrustServerCertificate=True;MultipleActiveResultSets=True;"
   },
   "AllowedHosts": "*"
 }
