Removed hardcoded enviroment, which was set Development
Co-authored-by: Niels <nfab@itu.dk>
Co-authored-by: Oliver <oash@itu.dk>

--- a/src/Chirp.Razor/Properties/launchSettings.json
+++ b/src/Chirp.Razor/Properties/launchSettings.json
@@ -17,6 +17,15 @@
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
       },
+      "Production": {
+        "commandName": "Project",
+        "dotnetRunMessages": true,
+        "launchBrowser": true,
+        "applicationUrl": "http://localhost:5002",
+        "environmentVariables": {
+          "ASPNETCORE_ENVIRONMENT": "Production"
+        }
+      },
       "IIS Express": {
         "commandName": "IISExpress",
         "launchBrowser": true,
