--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,19 @@
+## Files that should automatically be converted to LF line endings
 * text eol=lf
+
+## Denote alle files that are truly binary
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+*.mov binary
+*.mp4 binary
+*.mp3 binary
+*.flv binary
+*.fla binary
+*.swf binary
+*.gz binary
+*.zip binary
+*.7z binary
+*.ttf binary
